{
    "name": "PlayerMovement",
    "maps": [
        {
            "name": "KeyBoard",
            "id": "cb87cd2c-6660-4c57-b374-366305f8679d",
            "actions": [
                {
                    "name": "InputV",
                    "type": "Button",
                    "id": "1767f78e-b9ba-4471-80fc-20d1b2ca6949",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "InputH",
                    "type": "Button",
                    "id": "39542f61-1636-40db-9213-eb2a139a0ea4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "ba38ffc3-ef32-4428-a402-9ce2b65d505b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "aa02130d-98cd-4026-ba2f-0c0aba78502a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "Vertical",
                    "id": "71f55cbc-2ef9-49f4-92eb-a651e165795a",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InputV",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Negative",
                    "id": "c7b1bb33-4ff8-4ae9-8556-d3a5aba6e6fc",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InputV",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "1952707e-c9ac-449e-96d5-da2b5e159790",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InputV",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "deefcf66-3829-49e8-b822-a2dc36531984",
                    "path": "<Keyboard>/shift",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Horizontal",
                    "id": "75aa8ece-270d-4734-b8e2-18d655c33c74",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InputH",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "5a3c3d6b-47e7-4337-8299-d2bf6ddf5694",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InputH",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "08b91a62-2ceb-4eaa-8d1b-bfe466be3fb9",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InputH",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "29fb2193-5b98-4cb8-b11d-84a5b4b43299",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}